# DiCast

./: Cargo.toml  Makefile  README.md  tsconfig.json
dice/: Cargo.toml
dice/src/: dice.rs  parse.rs
frontend/: Cargo.toml
frontend/src/: app.rs  die.rs  lib.rs
src/: main.rs  mime.rs  template.rs
static/: index.html  style.css  util.js
templates/: index.html.liquid  main.js.liquid  style.css.liquid
ts/: main.ts
