[package]
name = "dnd_utils"
version = "0.1.0"
authors = ["liam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.3"
tokio = { version = "0.2.21", features = ["macros"] }
liquid = "0.20.1"
hyper = "0.13.6"
pretty_env_logger = "0.4.0"
log = "0.4.8"
