[package]
name = "dicast"
version = "0.1.0"
authors = ["liam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dice = { path = "dice" }
hyper = "0.13.6"
liquid = "0.20.1"
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version = "0.2.21", features = ["macros"] }
warp = "0.2.3"
http = "0.2.1"
thiserror = "1.0.20"
serde = "1.0.114"
serde_json = "1.0.56"
serde_derive = "1.0.114"
