[package]
authors = ["Liam Woodawrd <liamowoodward@gmail.com"]
description = "Frontend for dnd_utils website dice rolling application."
edition = "2018"
name = "frontend"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
yew = { version = "0.17.2", features = ["services"] }
wasm-bindgen = "0.2.64"
serde = "1.0.114"
serde_json = "1.0.56"
serde_derive = "1.0.114"
http = "0.2.1"
anyhow = "1.0.31"
web-sys = "0.3.41"
wasm-logger = "0.2.0"
log = "0.4.8"
wee_alloc = { version = "0.4.5", optional = true }
